deployment/base/api-gateway/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-url
  labels:
    prometheus: monitoring
spec:
  type: ClusterIP
  ports:
    - name: app-port
      port: 8080
      targetPort: 8080
    - name: monitoring-port
      port: 9000
      targetPort: 9000
  selector:
    name: api-gateway
